src/objects/ffps_brunt__StagingLine__c.object
<CustomObject>
    <fields>
        <fullName>ffps_brunt__BillingDocumentLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Document Line</label>
        <referenceTo>fferpcore__BillingDocumentLineItem__c</referenceTo>
        <relationshipLabel>Staging Lines</relationshipLabel>
        <relationshipName>Staging_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__Dimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Staging Lines</relationshipLabel>
        <relationshipName>Staging_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__Dimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Staging Lines</relationshipLabel>
        <relationshipName>Staging_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__Dimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Staging Lines</relationshipLabel>
        <relationshipName>Staging_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__GeneralLedgerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Override General Ledger Account</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Staging Lines</relationshipLabel>
        <relationshipName>Staging_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Staging Lines</relationshipLabel>
        <relationshipName>Staging_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__RevenueId__c</fullName>
        <label>Revenue Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__SFContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Staging Lines</relationshipLabel>
        <relationshipName>Staging_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__StagingHeader__c</fullName>
        <label>Staging Header</label>
        <referenceTo>ffps_brunt__StagingHeader__c</referenceTo>
        <relationshipLabel>Staging Lines</relationshipLabel>
        <relationshipName>StagingLines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__TaxCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Staging Lines</relationshipLabel>
        <relationshipName>Staging_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__UnitPrice__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Staging Line</label>
    <nameField>
        <displayFormat>SL{000000}</displayFormat>
        <label>Staging Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staging Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>